--- a/e-commerce/pom.xml
+++ b/e-commerce/pom.xml
@@ -8,11 +8,11 @@
         <version>2.4.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.youtube</groupId>
+    <groupId>com</groupId>
     <artifactId>ecommerce</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>e-commerce</name>
-    <description>APIs for E-commerce application</description>
+    <name>E-commerce</name>
+    <description>E-commerce Application</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -53,12 +53,6 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
