--- a/e-commerce/pom.xml
+++ b/e-commerce/pom.xml
@@ -59,6 +59,13 @@
             <artifactId>razorpay-java</artifactId>
             <version>1.4.3</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
