--- a/e-commerce/src/main/resources/application.properties
+++ b/e-commerce/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 9090
-spring.datasource.url=jdbc:mysql://localhost:3306/e-commerce
+spring.datasource.url=jdbc:mysql://localhost:3306/jwt
 spring.datasource.username=root
 spring.datasource.password=education@O19
 spring.datasource.platform=mysql
